refactor users, boards
