# server/src/boards/controller.py
@@ -1,4 +1,4 @@
-from flask import Blueprint, session
+from flask import Blueprint
 from src.users.model import User
 from .model import Board
 from connexion import request
@@ -7,7 +7,10 @@ boards = Blueprint('boards', __name__)
 
 
 def create():
-    """create new board"""
+    """
+        Responds to a POST request for /api/boards
+        :return:
+    """
     board = Board(**request.json)
     board.save()
     response = {
@@ -17,21 +20,23 @@ def create():
     return response, 201
 
 
-def get_all_related_to_user():
-    """get all boards that a user is a member of"""
-    request_id = request.args.get('user')
-
-    if request_id != User.get_user_session_id():
-        return 403
-
-    boards = Board.query.filter_by(user=request_id)
-
-    results = []
-
-    for board in boards:
-        obj = {
-            'id': board.id,
-            'name': board.name,
-        }
-        results.append(obj)
-    return results, 200
+# def get_all_boards_for_user(uid):
+#     """
+#         Responds to a GET request for /api/boards?uid={id}
+#         :param uid: integer
+#         :return: {'id': number, 'name': string}
+#     """
+#     results = []
+#
+#     if uid != User.get_user_session_id():
+#         return results, 403
+#
+#     boards = Board.query.filter_by(uid=str(uid))
+#
+#     for board in boards:
+#         obj = {
+#             'id': board.id,
+#             'name': board.name,
+#         }
+#         results.append(obj)
+#     return results, 200
